breaking: version 1 release
Signed-off-by: secondman <secondman@jetstreamlabs.com>

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "./vendor/bin/fixr",
     "test": "./vendor/bin/pest",
     "fix": "bunx lint-staged",
-    "cb": "composer update && bun update",
-    "prepare": "husky"
+    "cb": "composer update && bun update"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
