--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,16 @@
       "providers": [
         "Zen\\Zorah\\ZorahServiceProvider"
       ]
+    },
+    "branch-alias": {
+      "dev-master": "1.x-dev"
     }
   },
   "config": {
     "allow-plugins": {
       "pestphp/pest-plugin": true
     }
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
