--- a/.gitattributes
+++ b/.gitattributes
@@ -13,10 +13,9 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .prettierrc export-ignore
+.prettierignore export-ignore
 babel.config.js export-ignore
 composer.lock export-ignore
-package-lock.json export-ignore
-CHANGELOG.md export-ignore
-phpunit.xml.dist export-ignore
-pinte.json export-ignore
+bun.lockb export-ignore
+phpunit.xml export-ignore
 release.config.js export-ignore
